lowmem (1.08) UNRELEASED; urgency=low

  * Joey Hess
    - Try to reword the templates to avoid referring to installation, since
      the system may be used in rescue mode.

 -- Joey Hess <joeyh@debian.org>  Thu,  5 May 2005 10:58:37 -0400

lowmem (1.07) unstable; urgency=low

  * Thiemo Seufer
    - Ajust memory usage values for mips.
    - Exclude .svn directories from build.
  * Martin Michlmayr
    - Test and update Cobalt (mipsel): 36+ real memory: no lowmem,
      25-35: lowmem 1, 22-24: lowmem 2.

 -- Thiemo Seufer <ths@debian.org>  Mon, 14 Feb 2005 01:02:18 +0100

lowmem (1.06) unstable; urgency=low

  * Joey Hess
    - Preseed countrychooser/shortlist, needed due to preseeding change in
      countrychooser. Closes: #277493

 -- Joey Hess <joeyh@debian.org>  Wed, 20 Oct 2004 13:13:34 -0400

lowmem (1.05) unstable; urgency=low

  * Joey Hess
    - Add a keymap file removal hack, post-anna.
    - Add partman hook and module removal hack.
    - i386 can run in lowmem level 1 for 32 mb installs again.

 -- Joey Hess <joeyh@debian.org>  Fri,  1 Oct 2004 17:01:18 -0400

lowmem (1.04) unstable; urgency=low

  * Frans Pop
    - Template name change in countrychooser:
      country-name-shortlist -> shortlist

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Sep 2004 20:46:12 -0400

lowmem (1.03) unstable; urgency=low

  * Martin Michlmayr
    - Set level2 and min values for mipsel (Cobalt).
  * Bastian Blank
    - Set values for s390.

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Sep 2004 20:27:36 -0400

lowmem (1.02) unstable; urgency=low

  * Joey Hess
    - Add Sylvain Ferriol's lowmem level patch.
    - Modifed to store the level in /var/lib/lowmem. Level 1 is default
      lowmem mode, level 2 is super lowmem mode. The file still doesn't exist
      in non-lowmem mode.
    - Documented this.
    - Add error message if the machine doesn't have even the minimum
      supported memory. Closes: #266984

 -- Joey Hess <joeyh@debian.org>  Fri, 27 Aug 2004 16:12:07 -0400
