@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 4.2), dpkg-dev (>= 1.9.0)
 Package: lowmemcheck
 Architecture: any
 Priority: standard
+Depends: cdebconf-udeb (>= 0.75), main-menu (>= 1.03)
 XC-Package-Type: udeb
 Description: detect low-memory systems and enter lowmem mode
 
