@@ -14,3 +14,8 @@ Description: Insufficient memory
  At least ${MIN} megabytes of memory are required. If you continue,
  unpredictable and broken behavior will likely result. You should reboot
  now and add memory or find some other program to use.
+
+Template: lowmem/info
+Type: title
+# Note: not translatable, lowmem runs in English
+Description: Low memory mode
