@@ -2,6 +2,7 @@
 . /usr/share/debconf/confmodule
 template="$1"
 min="$2"
+db_info lowmem/info
 db_title "Low memory"
 db_subst "$template" MIN "$min"
 db_input critical "$template" || true
