@@ -3,6 +3,8 @@ lowmem (1.08) UNRELEASED; urgency=low
   * Joey Hess
     - Try to reword the templates to avoid referring to installation, since
       the system may be used in rescue mode.
+    - Set a "low memory mode" info message (rescue mode comes after and
+      beats this message). Requires cdebconf-udeb 0.75 and main-menu 1.03.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  5 May 2005 10:58:37 -0400
 
